--- a/cookbooks/isec/templates/default/isec-windows-2008.inf.erb
+++ b/cookbooks/isec/templates/default/isec-windows-2008.inf.erb
@@ -32,5 +32,8 @@ MaxServiceAge = 600
 MACHINE\Software\Microsoft\Windows\CurrentVersion\Policies\System\LegalNoticeCaption=1,"Title here for IBM Business Use Notice"
 MACHINE\Software\Microsoft\Windows\CurrentVersion\Policies\System\LegalNoticeText=7,Text here for IBM Business Use Notice
 MACHINE\System\CurrentControlSet\Control\Lsa\SCENoApplyLegacyAuditPolicy=4,0
+[Registry Keys]
+"CLASSES_ROOT",0,"D:PAR(A;CI;KA;;;BA)(A;CIIO;KA;;;CO)(A;CI;KA;;;SY)(A;CI;KR;;;BU)"
+"MACHINE\SYSTEM\CurrentControlSet\services\eventlog\Security",0,"D:PAR(A;CIIO;KA;;;CO)(A;CI;KA;;;SY)(A;CI;KA;;;BA)"
 [Profile Description]
 Description=Implements several parameters for ISEC Tech Specs 
