--- a/cookbooks/osconfig/templates/default/hosts.windows.erb
+++ b/cookbooks/osconfig/templates/default/hosts.windows.erb
@@ -4,6 +4,8 @@
 192.168.122.17		ADMINIB-UGA3MV4.ibm.com
 192.168.122.83		IBM-2cbe5295fd1.ibm.com
 192.168.122.212		WIN-DUDNIAF03LU.ibm.com
+192.168.122.178		WIN-DUDNIAF0-DC.ibm.com
+192.168.122.128		WIN-DUDNIAF0-MS.ibm.com
 192.168.122.44		WIN-DDC2AM1NFO8.ibm.com
 192.168.122.79		WIN-DDC2AM1N-DC.ibm.com
 192.168.122.114		WIN-DDC2AM1N-MS.ibm.com
