--- a/cookbooks/isec/templates/default/isec-windows-2008.inf.erb
+++ b/cookbooks/isec/templates/default/isec-windows-2008.inf.erb
@@ -11,6 +11,7 @@ PasswordHistorySize = 8
 LockoutBadCount = 5
 ResetLockoutCount = 30
 LockoutDuration = -1
+NewAdministratorName = "ibm_admin"
 ClearTextPassword = 0
 [Security Log]
 AuditLogRetentionPeriod = 1
